--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
     <div class="text">
         <h1 class="top">POP CHI</h1>
         <h2 id="counter">0</h2>
+        
     </div>
-    <div>
+    <div class="pic">
         <img id="chi" class="cat" src="images/chi1.png" alt="" onmousedown="press()" onmouseup="release()">
     </div>
+    <!-- <img id="chi" class="cat" src="images/chi1.png" alt="" onmousedown="press()" onmouseup="release()"> -->
     <!-- <img id="chi" class="cat" src="images/chi1.png" alt="" onclick="imgChange()" on>  -->
     
     <!-- </div> -->
     <div class="foot">
-        <p class="copyright">© 2021 Jira S.</p>
+        <p class="copyright">© 2022 jiji.</p>
     </div>
     <script src="app.js"></script>
 </body>
