--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         
     </div>
     <div class="pic">
-        <img id="chi" class="cat" src="images/chi1.png" alt="" onmousedown="press()" onmouseup="release()">
+        <img id="chi" class="cat" src="images/chi1.png" alt="" onmousedown="press()">
     </div>
     <!-- <img id="chi" class="cat" src="images/chi1.png" alt="" onmousedown="press()" onmouseup="release()"> -->
     <!-- <img id="chi" class="cat" src="images/chi1.png" alt="" onclick="imgChange()" on>  -->
     
     <!-- </div> -->
     <div class="foot">
-        <p class="copyright">© 2022 jiji.</p>
+        <p class="copyright">© 2022 Jira. v4</p>
     </div>
     <script src="app.js"></script>
 </body>
