--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     <!-- <div class="container-fluid foot">
         <p class="copyright">© 2022 Jira. v6</p>
     </div> -->
-    <script src="app.js"></script>
+    <script src="app.js?n=1"></script>
 </body>
 </html>
